[project]
name = "agent-streaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.2",
    "openai-agents[litellm,sqlalchemy]>=0.10.5",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.22",
]
